create github pages

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="countdown2 cid-rtN28F93nE" id="countdown2-3">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="countdown2 cid-rtN28F93nE" id="countdown2-3">
 
     
 
